--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GATITOS NEGROS</title>
-    <link rel="icon" href="IMAGENES/descarga(1).jpg">
+    <link rel="icon" href="IMAGENES/GATITONEGRO1.jpg".jpg>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>   
         <nav>
             <ul>
-                <li> <a href="IMAGENES/descarga.jpg"> </a> </li>
+                <li> <a href=> </a> </li>
             </ul>   
         </nav>
     </header>
